# Genesys-Stock-Manager-Backend

./: .gitignore  .pre-commit-config.yaml  BUGS.md  Makefile  NOTES.md  README.md  TODO.md  pyproject.toml  requirements.txt
__saves/: orima_mapper.json
app/api/v1/: auth.py  brands.py  catalog_update_stream.py  categories.py  feeds.py  mappers.py  products.py  runs.py  suppliers.py  system.py
app/core/: config.py  deps.py  errors.py  http_errors.py  logging.py  middleware.py  normalize.py
app/domain/: ingest_engine.py
app/domains/: ingest_engine.py
app/domains/auth/usecases/: login.py
app/domains/catalog/: repos.py
app/domains/catalog/read_services/: product_detail.py
app/domains/catalog/services/: active_offer.py  mappers.py  product_detail.py  series.py  sync_events.py
app/domains/catalog/usecases/brands/: list_brands.py
app/domains/catalog/usecases/catalog_update_stream/: ack_events.py  get_pending_events.py  list_events.py
app/domains/catalog/usecases/categories/: list_categories.py
app/domains/mapping/: __init__.py  engine.py
app/domains/procurement/: repos.py
app/helpers/: best_offer.py  number_conversions.py
app/infra/: base.py  bootstrap.py  session.py  uow.py
app/models/: __init__.py  brand.py  catalog_update_stream.py  category.py  enums.py  feed_mapper.py  feed_run.py  product.py  product_active_offer.py  product_meta.py  product_supplier_event.py  supplier.py  supplier_feed.py  supplier_item.py
app/repositories/: base.py  brand_repo.py  category_repo.py  feed_run_repo.py  mapper_repo.py  product_event_repo.py  product_repo.py  supplier_feed_repo.py  supplier_item_repo.py  supplier_repo.py
app/repositories/catalog/read/: brand_read_repo.py  catalog_update_stream_read_repo.py  category_read_repo.py  product_active_offer_read_repo.py  product_meta_read_repo.py  products_read_repo.py
app/repositories/catalog/write/: brand_write_repo.py  catalog_update_stream_write_repo.py  category_write_repo.py  product_active_offer_write_repo.py  product_write_repo.py
app/repositories/procurement/read/: feed_run_read_repo.py  mapper_read_repo.py  product_event_read_repo.py  supplier_feed_read_repo.py  supplier_item_read_repo.py  supplier_read_repo.py
app/repositories/procurement/write/: feed_run_write_repo.py  mapper_write_repo.py  product_event_write_repo.py  supplier_feed_write_repo.py  supplier_item_write_repo.py  supplier_write_repo.py
app/schemas/: auth.py  brands.py  catalog_update_stream.py  categories.py  feeds.py  mappers.py  products.py  suppliers.py  system.py
app/services/commands/auth/: login.py
app/services/commands/feeds/: delete_supplier_feed.py  test_feed.py  upsert_supplier_feed.py
app/services/commands/mappers/: put_mapper.py  validate_mapper.py
app/services/commands/runs/: ingest_supplier.py
app/services/commands/suppliers/: create_supplier.py  delete_supplier.py  update_supplier.py
app/services/queries/feeds/: get_by_supplier.py
app/services/queries/mappers/: get_by_supplier.py  get_mapper.py
app/services/queries/products/: list_products.py
app/services/queries/suppliers/: get_supplier_detail.py  list_suppliers.py
app/shared/: jwt.py
apps/: api_main.py
(+18 files in other folders)
